# climbing_project

./: .gitignore  README.md  pyproject.toml
ESP_driver/: platformio.ini
ESP_driver/src/: main.cpp
climbing_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
debug_scripts/: render_upload.py  serial_test.py  vision_bridge.py
vision/: diff_route.py  homography.py  render_upload.py  vision_bridge.py
web_interface/src/: app.py  init_db.py
web_interface/src/templates/: calibrate.html  index.html  preview.html
